# prelegal

./: .gitignore  LICENSE  README.md  catalog.json  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: auth.py  database.py  main.py  models.py
backend/app/routers/: auth.py  chat.py  documents.py
backend/tests/: test_auth.py  test_chat.py  test_documents.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ChatPage.tsx  DocumentPreview.tsx  NDAForm.tsx  NDAPreview.tsx
frontend/src/lib/: api.ts  nda-renderer.ts  types.ts
frontend/src/pages/: HomePage.tsx  LoginPage.tsx
frontend/src/test/: App.test.tsx  ChatPage.test.tsx  LoginPage.test.tsx  setup.ts
scripts/: start-mac.sh  start-windows.bat  start.sh  stop-mac.sh  stop-windows.bat  stop.sh
templates/: BAA.md  CSA.md  DPA.md  LICENSE.md  Partnership-Agreement.md  Pilot-Agreement.md  Software-License-Agreement.md  design-partner-agreement.md  psa.md  sla.md
